--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-router-dom": "^7.11.0",
     "swiper": "^12.0.3",
     "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.14"
